# parameta

./: meson.build  metadata_access.h  parameta.hpp  parameta_traits.hpp  readme.md
.github/workflows/: ci.yml
subprojects/: lml_namespace.wrap
tests/: ALLOW_ZERO_SIZE_ARRAY.hpp  test_parameta.cpp  test_parameta.hpp
